--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.3.4",
+    "bootstrap": "^5.3.2",
     "next": "^14.0.3",
     "postcss": "8.4.29",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "styled-components": "^6.0.7",
