--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-youtube": "^10.1.0",
     "styled-components": "^6.0.7",
     "typescript": "5.2.2"
   }
